# coin_collector

./: README.md  pyproject.toml
src/coin_collector/: __init__.py  cli.py  config.py  game.py
src/coin_collector/levels/: max_level.json
tests/: test_level_validation.py
